refactor navbar structure for improved readability and maintainability; add about page template

--- a/FrontEnd/components/navbar.html
+++ b/FrontEnd/components/navbar.html
@@ -1,125 +1,121 @@
 <!-- Combined navbar: logo only; yellow background -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-warning" aria-label="Main navigation">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">
-        <img src="FrontEnd/images/official_logo.jpg" alt="Kigumo logo" class="img-fluid navbar-logo" />
-        <!-- <span class="college-name">Kigumo Technical And Vocational College</span> -->
-      </a>
+<nav class="navbar navbar-expand-lg navbar-light bg-warning" aria-label="Main navigation">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="index.html">
+      <img src="FrontEnd/images/official_logo.jpg" alt="Kigumo logo" class="img-fluid navbar-logo" />
+      <!-- <span class="college-name">Kigumo Technical And Vocational College</span> -->
+    </a>
 
-      <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavCollapse"
-        aria-controls="mainNavCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="toggler-icon" aria-hidden="true"><span class="bar"></span><span class="bar"></span><span
-            class="bar"></span></span>
-        <span class="visually-hidden">Toggle navigation</span>
-      </button>
+    <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavCollapse"
+      aria-controls="mainNavCollapse" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="toggler-icon" aria-hidden="true"><span class="bar"></span><span class="bar"></span><span
+          class="bar"></span></span>
+      <span class="visually-hidden">Toggle navigation</span>
+    </button>
 
-      <div class="collapse navbar-collapse" id="mainNavCollapse">
-        <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+    <div class="collapse navbar-collapse" id="mainNavCollapse">
+      <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+        <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
 
-          <!-- About with nested Administration submenu -->
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">About</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">About Kigumo TVC</a></li>
-              <li><a class="dropdown-item" href="#">Service Charter</a></li>
-              <li><a class="dropdown-item" href="#">QMS</a></li>
-              <li><a class="dropdown-item" href="#">Vision &amp; Mission</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
+        <!-- About with nested Administration submenu -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">About</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">About Kigumo TVC</a></li>
+            <li><a class="dropdown-item" href="#">Vision &amp; Mission</a></li>
+            
+            <li>
+              <hr class="dropdown-divider">
+            </li>
 
-              <li class="dropdown-submenu">
-                <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Administration</a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Board of Management</a></li>
-                  <li><a class="dropdown-item" href="#">Chief Principal</a></li>
-                  <li><a class="dropdown-item" href="#">Deputy Principal Academics</a></li>
-                  <li><a class="dropdown-item" href="#">Deputy Principal Administration</a></li>
-                  <li><a class="dropdown-item" href="#">Dean of Students</a></li>
-                  <li><a class="dropdown-item" href="#">Head of Departments / HOS</a></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
+            <li class="dropdown-submenu">
+              <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Leadership</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Board of Management</a></li>
+                <li><a class="dropdown-item" href="#">College Administartion</a></li>
+              </ul>
+            </li>
+            <li><a class="dropdown-item" href="#">Service Charter</a></li>
+          </ul>
+        </li>
 
-          <!-- Departments with nested Academic and Non-Academic -->
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Departments</a>
-            <ul class="dropdown-menu">
-              <li class="dropdown-submenu">
-                <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Academic</a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">ICT</a></li>
-                  <li><a class="dropdown-item" href="#">Agriculture</a></li>
-                  <li><a class="dropdown-item" href="#">Mechanical</a></li>
-                  <li><a class="dropdown-item" href="#">Building &amp; Construction</a></li>
-                  <li><a class="dropdown-item" href="#">Electrical &amp; Electronics</a></li>
-                  <li><a class="dropdown-item" href="#">Hospitality</a></li>
-                  <li><a class="dropdown-item" href="#">Cosmetology</a></li>
-                  <li><a class="dropdown-item" href="#">Fashion &amp; Design</a></li>
-                </ul>
-              </li>
+        <!-- Departments with nested Academic and Non-Academic -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Departments</a>
+          <ul class="dropdown-menu">
+            <li class="dropdown-submenu">
+              <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Academic</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">ICT</a></li>
+                <li><a class="dropdown-item" href="#">Agriculture</a></li>
+                <li><a class="dropdown-item" href="#">Mechanical</a></li>
+                <li><a class="dropdown-item" href="#">Building &amp; Construction</a></li>
+                <li><a class="dropdown-item" href="#">Electrical &amp; Electronics</a></li>
+                <li><a class="dropdown-item" href="#">Hospitality</a></li>
+                <li><a class="dropdown-item" href="#">Cosmetology</a></li>
+                <li><a class="dropdown-item" href="#">Fashion &amp; Design</a></li>
+              </ul>
+            </li>
 
-              <li>
-                <hr class="dropdown-divider">
-              </li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
 
-              <li class="dropdown-submenu">
-                <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Non Academic</a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Board of Management</a></li>
-                  <li><a class="dropdown-item" href="#">Sports</a></li>
-                  <li><a class="dropdown-item" href="#">Guidance &amp; Counselling</a></li>
-                  <li><a class="dropdown-item" href="#">Science</a></li>
-                  <li><a class="dropdown-item" href="#">Marketing &amp; Advertisement</a></li>
-                  <li><a class="dropdown-item" href="#">Music</a></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
+            <li class="dropdown-submenu">
+              <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Non Academic</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Board of Management</a></li>
+                <li><a class="dropdown-item" href="#">Sports</a></li>
+                <li><a class="dropdown-item" href="#">Guidance &amp; Counselling</a></li>
+                <li><a class="dropdown-item" href="#">Science</a></li>
+                <li><a class="dropdown-item" href="#">Marketing &amp; Advertisement</a></li>
+                <li><a class="dropdown-item" href="#">Music</a></li>
+              </ul>
+            </li>
+          </ul>
+        </li>
 
-          <li class="nav-item"><a class="nav-link" href="#">Courses</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">News &amp; Events</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Careers</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Downloads</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Students</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Courses</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">News &amp; Events</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Careers</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Downloads</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Students</a></li>
 
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Portals</a>
-            <ul class="dropdown-menu">
-              <li class="dropdown-submenu">
-                <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Students</a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Intelimmis</a></li>
-                  <li><a class="dropdown-item" href="#">Timetables</a></li>
-                </ul>
-              </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Portals</a>
+          <ul class="dropdown-menu">
+            <li class="dropdown-submenu">
+              <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Students</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Intelimmis</a></li>
+                <li><a class="dropdown-item" href="#">Timetables</a></li>
+              </ul>
+            </li>
 
-              <li>
-                <hr class="dropdown-divider">
-              </li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
 
-              <li class="dropdown-submenu">
-                <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Staffs</a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Intellimis Staff Portal</a></li>
-                  <li><a class="dropdown-item" href="#">Student Manangement</a></li>
-                  <li><a class="dropdown-item" href="#">Finance &amp; Administration</a></li>
-                  <li><a class="dropdown-item" href="#">Clubs Manangement</a></li>
-                  <li><a class="dropdown-item" href="#">Marketing &amp; Advertisement</a></li>
-                  <li><a class="dropdown-item" href="#">Exam Transcprits</a></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="FrontEnd/html/contact.html">Contact us</a></li>
-        </ul>
+            <li class="dropdown-submenu">
+              <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Staffs</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Intellimis Staff Portal</a></li>
+                <li><a class="dropdown-item" href="#">Student Manangement</a></li>
+                <li><a class="dropdown-item" href="#">Finance &amp; Administration</a></li>
+                <li><a class="dropdown-item" href="#">Clubs Manangement</a></li>
+                <li><a class="dropdown-item" href="#">Marketing &amp; Advertisement</a></li>
+                <li><a class="dropdown-item" href="#">Exam Transcprits</a></li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item"><a class="nav-link" href="FrontEnd/html/contact.html">Contact us</a></li>
+      </ul>
 
-        <form class="d-flex ms-auto ms-lg-0" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
+      <form class="d-flex ms-auto ms-lg-0" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
     </div>
-  </nav>
+  </div>
+</nav>
