--- a/FrontEnd/components/navbar.html
+++ b/FrontEnd/components/navbar.html
@@ -17,13 +17,13 @@
       <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
         <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
 
-        <!-- About with nested Administration submenu -->
+        <!-- About KTVC -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">About</a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">About Kigumo TVC</a></li>
             <li><a class="dropdown-item" href="#">Vision &amp; Mission</a></li>
-            
+
             <li>
               <hr class="dropdown-divider">
             </li>
@@ -39,21 +39,36 @@
           </ul>
         </li>
 
-        <!-- Departments with nested Academic and Non-Academic -->
+        <!--  Administartion -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"
+            aria-expanded="false">Administartion</a>
+          <ul class="dropdown-menu">
+            <li class="dropdown-submenu">
+              <a class="dropdown-item " href="#" aria-expanded="false">Registrar's Office</a>
+              <a class="dropdown-item" href="#" aria-expanded="false">Finance Office</a>
+              <a class="dropdown-item" href="#" aria-expanded="false">Internal Quality Assuarance</a>
+              <a class="dropdown-item" href="#" aria-expanded="false">ICT Services</a>
+              <a class="dropdown-item" href="#" aria-expanded="false">Exams Officer</a>
+            </li>
+          </ul>
+        </li>
+
+        <!-- Departments  -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Departments</a>
           <ul class="dropdown-menu">
             <li class="dropdown-submenu">
               <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Academic</a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">ICT</a></li>
-                <li><a class="dropdown-item" href="#">Agriculture</a></li>
-                <li><a class="dropdown-item" href="#">Mechanical</a></li>
-                <li><a class="dropdown-item" href="#">Building &amp; Construction</a></li>
-                <li><a class="dropdown-item" href="#">Electrical &amp; Electronics</a></li>
-                <li><a class="dropdown-item" href="#">Hospitality</a></li>
-                <li><a class="dropdown-item" href="#">Cosmetology</a></li>
-                <li><a class="dropdown-item" href="#">Fashion &amp; Design</a></li>
+                <li><a class="dropdown-item" href="#">Computing and Informatics</a></li>
+                <li><a class="dropdown-item" href="#">Agriculture &amp; Eniviromental Studies</a></li>
+                <li><a class="dropdown-item" href="#">Mechanical &amp; Automotive Engineering</a></li>
+                <li><a class="dropdown-item" href="#">Building &amp; Civil Engineering</a></li>
+                <li><a class="dropdown-item" href="#">Electrical &amp; Electronics Engineering</a></li>
+                <li><a class="dropdown-item" href="#">Hospitality & Tourism Manangement</a></li>
+                <li><a class="dropdown-item" href="#">Fashion Design &amp Cosmetology</a></li>
+                <li><a class="dropdown-item" href="#">Business &amp; Enterpreneurship</a></li>
               </ul>
             </li>
 
@@ -64,58 +79,58 @@
             <li class="dropdown-submenu">
               <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Non Academic</a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Board of Management</a></li>
                 <li><a class="dropdown-item" href="#">Sports</a></li>
                 <li><a class="dropdown-item" href="#">Guidance &amp; Counselling</a></li>
                 <li><a class="dropdown-item" href="#">Science</a></li>
                 <li><a class="dropdown-item" href="#">Marketing &amp; Advertisement</a></li>
                 <li><a class="dropdown-item" href="#">Music</a></li>
+                <li><a class="dropdown-item" href="#">Security &amp; Cleanig Department</a></li>
               </ul>
-            </li>
-          </ul>
+            <li><a class="dropdown-item" href="#">Recognition of Prior Learning (RPL)</a></li>
+            <li><a class="dropdown-item" href="#">HR Department</a></li>
         </li>
+      </ul>
+      </li>
 
-        <li class="nav-item"><a class="nav-link" href="#">Courses</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">News &amp; Events</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Careers</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Downloads</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Students</a></li>
+      <!--  Admissions -->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Admissions</a>
+        <ul class="dropdown-menu">
+          <li class="dropdown-submenu">
+            <a class="dropdown-item " href="#" aria-expanded="false">All Programs</a>
+            <a class="dropdown-item" href="#" aria-expanded="false">How to Apply</a>
+            <a class="dropdown-item" href="#" aria-expanded="false">Fees Structure</a>
+            <a class="dropdown-item" href="#" aria-expanded="false">KTVC Latest Bronchure</a>
+          </li>
+        </ul>
+      </li>
+      <!-- 
+      <li class="nav-item"><a class="nav-link" href="#">News &amp; Events</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Careers</a></li> -->
 
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Portals</a>
-          <ul class="dropdown-menu">
-            <li class="dropdown-submenu">
-              <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Students</a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Intelimmis</a></li>
-                <li><a class="dropdown-item" href="#">Timetables</a></li>
-              </ul>
-            </li>
-
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-
-            <li class="dropdown-submenu">
-              <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Staffs</a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Intellimis Staff Portal</a></li>
-                <li><a class="dropdown-item" href="#">Student Manangement</a></li>
-                <li><a class="dropdown-item" href="#">Finance &amp; Administration</a></li>
-                <li><a class="dropdown-item" href="#">Clubs Manangement</a></li>
-                <li><a class="dropdown-item" href="#">Marketing &amp; Advertisement</a></li>
-                <li><a class="dropdown-item" href="#">Exam Transcprits</a></li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-        <li class="nav-item"><a class="nav-link" href="FrontEnd/html/contact.html">Contact us</a></li>
+      <!--  Students affairs -->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Student Affairs</a>
+        <ul class="dropdown-menu">
+          <li class="dropdown-submenu">
+            <a class="dropdown-item " href="#" aria-expanded="false">Dean of Students</a>
+            <a class="dropdown-item" href="#" aria-expanded="false">Students' Council</a>
+            <a class="dropdown-item" href="#" aria-expanded="false">Guidance &amp; Counseling</a>
+            <a class="dropdown-item" href="#" aria-expanded="false">Clubs &amp; Societies</a>
+            <a class="dropdown-item" href="#" aria-expanded="false">Class &amp; Exam Timetables</a>
+            <a class="dropdown-item" href="#" aria-expanded="false">Sports &amp; Recreation</a>
+          </li>
+        </ul>
+      </li>
+      <li class="nav-item"><a class="nav-link" href="FrontEnd/html/contact.html">Contact us</a></li>
       </ul>
 
       <form class="d-flex ms-auto ms-lg-0" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
         <button class="btn btn-outline-success" type="submit">Search</button>
+
       </form>
+      <a href="#"><button class="btn btn-outline-success login" type="button">login</button></a>
     </div>
   </div>
 </nav>
