--- a/FrontEnd/components/footer.html
+++ b/FrontEnd/components/footer.html
@@ -37,7 +37,8 @@
           <h6 class="text-uppercase fw-bold mb-3">Quick Links</h6>
           <ul class="list-unstyled footer-links">
             <li><a href="index.html"><i class="bi bi-arrow-right-short"></i> Home</a></li>
-            <li><a href="#"><i class="bi bi-arrow-right-short"></i> About</a></li>
+            <li><a href="FrontEnd/html/about.html"><i class="bi bi-arrow-right-short"></i> About</a></li>
+            <li><a href="FrontEnd/html/vision.html"><i class="bi bi-arrow-right-short"></i> Vision &amp; Mission</a></li>
             <li><a href="#"><i class="bi bi-arrow-right-short"></i> Our Programmes</a></li>
             <li><a href="#"><i class="bi bi-arrow-right-short"></i> Latest News</a></li>
             <li><a href="#"><i class="bi bi-arrow-right-short"></i> Job Vacancies</a></li>
