--- a/FrontEnd/components/navbar.html
+++ b/FrontEnd/components/navbar.html
@@ -6,11 +6,11 @@
       <!-- <span class="college-name">Kigumo Technical And Vocational College</span> -->
     </a>
 
-    <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavCollapse"
+    <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavCollapse"
       aria-controls="mainNavCollapse" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="toggler-icon" aria-hidden="true"><span class="bar"></span><span class="bar"></span><span
-          class="bar"></span></span>
-      <span class="visually-hidden">Toggle navigation</span>
+      <span class="toggler-bar"></span>
+      <span class="toggler-bar"></span>
+      <span class="toggler-bar"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="mainNavCollapse">
@@ -21,8 +21,8 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">About</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">About Kigumo TVC</a></li>
-            <li><a class="dropdown-item" href="#">Vision &amp; Mission</a></li>
+            <li><a class="dropdown-item" href="FrontEnd/html/about.html">About Kigumo TVC</a></li>
+            <li><a class="dropdown-item" href="FrontEnd/html/vision.html">Vision &amp; Mission</a></li>
 
             <li>
               <hr class="dropdown-divider">
